--- a/src/main/resources/fxml/baseApp.fxml
+++ b/src/main/resources/fxml/baseApp.fxml
@@ -117,15 +117,13 @@
                                 </HBox>
                         <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="6">
                            <children>
-                              <Button disable="true" maxHeight="50.0" maxWidth="50.0" minHeight="50.0" minWidth="50.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" styleClass="restart-button" visible="false">
+                               <Button fx:id="speedButton" maxHeight="50.0" maxWidth="50.0" minHeight="50.0" minWidth="50.0" mnemonicParsing="false" onAction="#addSpeedUp" prefHeight="60.0" prefWidth="60.0" styleClass="speedup-button" text="2x">
                                  <HBox.margin>
                                     <Insets bottom="30.0" left="10.0" right="10.0" top="10.0" />
                                  </HBox.margin>
-                              </Button>
-                              <Button maxHeight="50.0" maxWidth="50.0" minHeight="50.0" minWidth="50.0" mnemonicParsing="false" onAction="#addSpeedUp" prefHeight="60.0" prefWidth="60.0" styleClass="speedup-button" text="x2">
-                                 <HBox.margin>
-                                    <Insets bottom="30.0" left="10.0" right="10.0" top="10.0" />
-                                 </HBox.margin>
+                                 <font>
+                                    <Font name="System Bold" size="18.0" />
+                                 </font>
                               </Button>
                            </children>
                         </HBox>
