--- a/src/main/resources/fxml/factorsPanel.fxml
+++ b/src/main/resources/fxml/factorsPanel.fxml
@@ -1,20 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<<<<<<< HEAD
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Font?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.scalaFX.FXControllers.FactorsPanelController">
-   <GridPane layoutX="108.0" layoutY="148.0" prefHeight="180.0" prefWidth="439.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="0.0">
-      <columnConstraints>
-         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="52.0" prefWidth="100.0" />
-         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="23.0" prefWidth="100.0" />
-         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="25.0" prefWidth="100.0" />
-=======
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -22,132 +11,76 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.scalaFX.FXControllers.FactorsPanelController">
-   <GridPane layoutX="108.0" layoutY="148.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-      <columnConstraints>
-         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="40.0" prefWidth="100.0" />
-         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="25.0" prefWidth="100.0" />
-         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="35.0" prefWidth="100.0" />
->>>>>>> 78e90d1 (add disturbing factors first gui implementation)
-      </columnConstraints>
-      <rowConstraints>
-         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      </rowConstraints>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="3">
-         <GridPane layoutX="-21.0" layoutY="-15.0" prefHeight="25.0" prefWidth="334.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-            <columnConstraints>
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="30.0" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            </columnConstraints>
-            <rowConstraints>
-               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            </rowConstraints>
-            <GridPane GridPane.columnSpan="3">
-               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="30.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="70.0" prefWidth="100.0" />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-               </rowConstraints>
-               <Label prefHeight="30.0" prefWidth="94.0" text="Fattori">
-                  <font>
-                     <Font name="System Bold" size="20.0" />
-                  </font>
-                  <GridPane.margin>
-                     <Insets left="5.0" top="5.0" />
-                  </GridPane.margin>
-               </Label>
-<<<<<<< HEAD
-=======
-               <Label fx:id="factorIncomingLabel" alignment="CENTER_RIGHT" prefHeight="30.0" prefWidth="237.0" text="Fattore in corso..." textAlignment="CENTER" textFill="#8093f1" textOverrun="CENTER_ELLIPSIS" visible="false" wrapText="true" GridPane.columnIndex="1">
-                  <font>
-                     <Font name="System Bold" size="20.0" />
-                  </font>
-                  <GridPane.margin>
-                     <Insets top="5.0" />
-                  </GridPane.margin>
-               </Label>
->>>>>>> 78e90d1 (add disturbing factors first gui implementation)
-            </GridPane>
-         </GridPane>
-      </AnchorPane>
-      <AnchorPane prefHeight="30.0" prefWidth="129.0" GridPane.rowIndex="1">
-<<<<<<< HEAD
-         <CheckBox fx:id="predatorCheckBox" contentDisplay="CENTER" layoutX="15.0" layoutY="7.0" mnemonicParsing="false" onAction="#predatorOnClick" text="Predatori" />
-      </AnchorPane>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
-         <CheckBox fx:id="toughFoodCheckBox" contentDisplay="CENTER" layoutX="15.0" layoutY="7.0" mnemonicParsing="false" onAction="#toughFoodOnClick" text="Cibo non masticabile" />
-      </AnchorPane>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
-         <CheckBox fx:id="upperFoodCheckBox" contentDisplay="CENTER" layoutX="15.0" layoutY="8.0" mnemonicParsing="false" onAction="#upperFoodOnClick" text="Cibo in alto" />
-      </AnchorPane>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4">
-         <CheckBox fx:id="limitedFoodCheckBox" contentDisplay="CENTER" layoutX="15.0" layoutY="6.0" mnemonicParsing="false" onAction="#limitedFoodOnClick" text="Cibo scarso" />
-      </AnchorPane>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5">
-         <CheckBox fx:id="hostileTemperatureCheckBox" contentDisplay="CENTER" layoutX="15.0" layoutY="6.0" mnemonicParsing="false" onAction="#hostileTemperatureOnClick" text="Temperature ostili" />
-      </AnchorPane>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-         <ImageView fx:id="wolf" fitHeight="30.0" fitWidth="60.0" layoutX="21.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="21.0" AnchorPane.topAnchor="0.0" />
-      </AnchorPane>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
-         <ImageView fx:id="tough_food" fitHeight="30.0" fitWidth="60.0" layoutX="21.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="0.0" />
-      </AnchorPane>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
-         <ImageView fx:id="high_food" fitHeight="30.0" fitWidth="60.0" layoutX="21.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="21.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="0.0" />
-      </AnchorPane>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
-         <ImageView fx:id="limited_food" fitHeight="30.0" fitWidth="60.0" layoutX="21.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="0.0" />
-      </AnchorPane>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
-         <ImageView fx:id="hostile_temperature" fitHeight="30.0" fitWidth="60.0" layoutX="21.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="0.0" />
-      </AnchorPane>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
-         <ImageView fx:id="wolf_time" fitHeight="30.0" fitWidth="30.0" layoutX="10.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="35.0" AnchorPane.topAnchor="0.0" />
-      </AnchorPane>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
-         <ImageView fx:id="tough_food_time" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="35.0" AnchorPane.topAnchor="0.0" />
-      </AnchorPane>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="3">
-         <ImageView fx:id="high_food_time" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="35.0" AnchorPane.topAnchor="0.0" />
-      </AnchorPane>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="4">
-         <ImageView fx:id="limited_food_time" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="35.0" AnchorPane.topAnchor="0.0" />
-      </AnchorPane>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="5">
-         <ImageView fx:id="hostile_temperature_time" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="35.0" AnchorPane.topAnchor="0.0" />
-      </AnchorPane>
-=======
-         <RadioButton fx:id="predatorRadioButton" contentDisplay="CENTER" layoutX="15.0" layoutY="7.0" mnemonicParsing="false" onAction="#predatorOnClick" text="Predatori" />
-      </AnchorPane>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
-         <RadioButton fx:id="toughFoodRadioButton" contentDisplay="CENTER" layoutX="15.0" layoutY="7.0" mnemonicParsing="false" onAction="#toughFoodOnClick" text="Cibo non masticabile" />
-      </AnchorPane>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
-         <RadioButton fx:id="upperFoodRadioButton" contentDisplay="CENTER" layoutX="15.0" layoutY="8.0" mnemonicParsing="false" onAction="#upperFoodOnClick" text="Cibo in alto" />
-      </AnchorPane>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4">
-         <RadioButton fx:id="limitedFoodRadioButton" contentDisplay="CENTER" layoutX="15.0" layoutY="6.0" mnemonicParsing="false" onAction="#limitedFoodOnClick" text="Cibo scarso" />
-      </AnchorPane>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5">
-         <RadioButton fx:id="hostileTemperatureRadioButton" contentDisplay="CENTER" layoutX="15.0" layoutY="6.0" mnemonicParsing="false" onAction="#hostileTemperatureOnClick" text="Temperature ostili" />
-      </AnchorPane>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="5" />
->>>>>>> 78e90d1 (add disturbing factors first gui implementation)
-   </GridPane>
+    <GridPane layoutY="-43.0" prefHeight="295.0" prefWidth="453.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="325.0" minWidth="10.0" prefWidth="311.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="208.0" minWidth="10.0" prefWidth="142.0" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+        <Label text="Fattori">
+            <font>
+                <Font name="System Bold" size="20.0" />
+            </font>
+            <GridPane.margin>
+                <Insets left="5.0" />
+            </GridPane.margin>
+        </Label>
+        <AnchorPane GridPane.rowIndex="1">
+            <CheckBox fx:id="wolfCheckBox" contentDisplay="CENTER" layoutX="15.0" layoutY="7.0" mnemonicParsing="false" onAction="#onWolfClick" prefHeight="49.0" prefWidth="220.0" text="Predatori" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <font>
+                    <Font size="16.0" />
+                </font>
+            </CheckBox>
+        </AnchorPane>
+        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+            <CheckBox fx:id="toughFoodCheckBox" contentDisplay="CENTER" layoutX="15.0" layoutY="7.0" mnemonicParsing="false" onAction="#onToughFoodClick" prefHeight="49.0" prefWidth="220.0" text="Cibo non masticabile" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <font>
+                    <Font size="16.0" />
+                </font>
+            </CheckBox>
+        </AnchorPane>
+        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
+            <CheckBox fx:id="highFoodCheckBox" contentDisplay="CENTER" layoutX="15.0" layoutY="7.0" mnemonicParsing="false" onAction="#onHighFoodClick" prefHeight="49.0" prefWidth="246.0" text="Cibo in alto" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <font>
+                    <Font size="16.0" />
+                </font>
+            </CheckBox>
+        </AnchorPane>
+        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4">
+            <CheckBox fx:id="limitedFoodCheckBox" contentDisplay="CENTER" layoutX="15.0" layoutY="7.0" mnemonicParsing="false" onAction="#onLimitedFoodClick" prefHeight="49.0" prefWidth="246.0" text="Cibo scarso" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <font>
+                    <Font size="16.0" />
+                </font>
+            </CheckBox>
+        </AnchorPane>
+        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5">
+            <CheckBox fx:id="hostileTemperatureCheckBox" contentDisplay="CENTER" layoutX="15.0" layoutY="7.0" mnemonicParsing="false" onAction="#onHostileTemperatureClick" prefHeight="49.0" prefWidth="246.0" text="Temperatura ostile" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <font>
+                    <Font size="16.0" />
+                </font>
+            </CheckBox>
+        </AnchorPane>
+        <AnchorPane prefHeight="200.0" prefWidth="177.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <ImageView fx:id="wolf" fitHeight="60.0" fitWidth="178.0" layoutX="-36.0" layoutY="-10.0" pickOnBounds="true" preserveRatio="true" />
+        </AnchorPane>
+        <AnchorPane prefHeight="200.0" prefWidth="177.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <ImageView fx:id="tough_food" fitHeight="60.0" fitWidth="178.0" layoutX="-36.0" layoutY="-10.0" pickOnBounds="true" preserveRatio="true" />
+        </AnchorPane>
+        <AnchorPane prefHeight="200.0" prefWidth="177.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <ImageView fx:id="high_food" fitHeight="60.0" fitWidth="178.0" layoutX="-36.0" layoutY="-10.0" pickOnBounds="true" preserveRatio="true" />
+        </AnchorPane>
+        <AnchorPane prefHeight="200.0" prefWidth="177.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <ImageView fx:id="limited_food" fitHeight="60.0" fitWidth="178.0" layoutX="-36.0" layoutY="-10.0" pickOnBounds="true" preserveRatio="true" />
+        </AnchorPane>
+        <AnchorPane prefHeight="200.0" prefWidth="177.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+            <ImageView fx:id="hostile_temperature" fitHeight="60.0" fitWidth="178.0" layoutX="-36.0" layoutY="-10.0" pickOnBounds="true" preserveRatio="true" />
+        </AnchorPane>
+    </GridPane>
 </AnchorPane>
